Fixes color contrast issues related to accessibility tests

--- a/src/components/price/price.scss
+++ b/src/components/price/price.scss
@@ -39,7 +39,27 @@
 
   @each $name, $color in $background-dark-colors {
     &--#{$name} {
-      color: $color;
+      .atomikui-price__amount {
+        color: $color;
+      }
+
+      @if $name ==
+        cyan or
+        $name ==
+        light-green or
+        $name ==
+        lime or
+        $name ==
+        yellow or
+        $name ==
+        light-orange or
+        $name ==
+        orange or
+        $name ==
+        amber
+      {
+        color: $white;
+      }
     }
   }
 
